--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
+    "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-highlight-words": "^0.18.0",
+    "react-hook-form": "^7.38.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
@@ -24,7 +26,7 @@
     "sass": "^1.54.9",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
-    "yub": "^0.11.1"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
