--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "json-server": "^0.17.0",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
+    "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
@@ -22,6 +23,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.1",
     "redux": "^4.2.0",
     "sass": "^1.54.9",
     "styled-components": "^5.3.5",
